--- a/springbootadmin/pom.xml
+++ b/springbootadmin/pom.xml
@@ -55,6 +55,16 @@
             <artifactId>spring-boot-admin-server-ui</artifactId>
             <version>2.1.1</version>
         </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
